<resources>
    <string name="app_name">LapidChat</string>
    <string name="welcome">Talk Secretly With LapidChat</string>
    <string name="login">Log in</string>
    <string name="logout">Log out</string>
    <string name="register">Create a Chat ID</string>
    <string name="main_demo">Main Activity</string>
    <string name="username">Username</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="channel_name">Main Notification</string>
    <string name="channel_description">desc of channel</string>
    <string name="account_setting">Account Setting</string>
    <string name="users">Users</string>
    <string name="welcome_page">Welcome to LapidChat</string>
    <string name="create_id">Create an ID for LapidChat</string>
    <string name="getting_started">Getting Started</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="status_example">Hi, there! I am using LapidChat for Secure Talk!</string>
    <string name="change_status">Change Status</string>
    <string name="change_profile_picture">Change Profile Picture</string>
    <string name="total_friends">Total Friends</string>
    <string name="send_friend_request">Send Friend Request</string>
    <string name="cancel_friend_request">Cancel Friend Request</string>
    <string name="confirm_friends">Confirm Friend Request</string>
    <string name="unfriend">Unfriend this Person</string>
</resources>
